# protorubric

./: .gitignore  .pre-commit-config.yaml  README.md  healthbench_tester.py  my_scoring_config.yaml  pyproject.toml  rate_limits.yaml  requirements-viz.txt  requirements.txt  setup.cfg  setup.py  test_rubric.yaml  tester.py
assets/eval/: raw_results.pkl  teacher_force_results.pkl
assets/example_rubrics/: my_scoring_config.yaml  my_tiered_scoring_config.yaml  test_rubric.yaml
assets/examples/example_configs/: my_aggregator_config.yaml  my_scoring_config.yaml  test_rubric.yaml
example_rubrics/: my_llm_committee_evaluator.yaml  my_scoring_config.yaml  test_rubric.yaml
notebooks/: eval.ipynb
scripts/: healthbench_tester.py  test_viz.py  tester.py
scripts/healthbench/: healthbench_to_open_rubric_utils.py  run.py  run_meta.py  setup_healthbench.py  setup_meta_healthbench.py
src/: requirements.txt
src/open_rubric/: __init__.py  aggregating.py  aggregators.py  answers.py  base.py  constants.py  dag.py  evaluating.py  evaluator.py  evaluators.py  query.py  requirement.py  rubric.py  scoring.py
src/open_rubric/configs/: aggregating.py  answers.py  base.py  dependent_results.py  evaluating.py  evaluator.py  query.py  requirement.py  rubric.py  scoring.py
src/open_rubric/eval/: metrics.py  rubric_with_answers.py
src/open_rubric/models/: cache.py  model.py  model_types.py
src/open_rubric/viz/: visualize.py
src/protorubric/: constants.py  rubric.py
tests/: test_aggregating.py  test_evaluating.py  test_recursive_aggregating.py  test_rubric.py  test_scoring.py
(+10 files in other folders)
